tests/errors/extraneous-rparen.knv
fn main() -> void {
    let x = 5);
    exit x;
}
